--- a/CraftableCartography/CraftableCartography.csproj
+++ b/CraftableCartography/CraftableCartography.csproj
@@ -52,6 +52,10 @@
 </ItemGroup>
 
 <ItemGroup>
+  <Content Remove="..\resources\assets\craftablecartography\config\**" />
+</ItemGroup>
+
+<ItemGroup>
   <Content Remove="..\resources\assets\craftablecartography\itemtypes\sextanttemporal.json" />
   <Content Remove="..\resources\assets\craftablecartography\recipes\grid\sextanttemporal.json" />
   <Content Remove="..\resources\assets\craftablecartography\shapes\sextanttemporal.json" />
