--- a/CraftableCartography/CraftableCartography.csproj
+++ b/CraftableCartography/CraftableCartography.csproj
@@ -57,6 +57,7 @@
 
 <ItemGroup>
   <Content Remove="..\resources\assets\craftablecartography\itemtypes\sextanttemporal.json" />
+  <Content Remove="..\resources\assets\craftablecartography\patches\metalplate-cupronikel.json" />
   <Content Remove="..\resources\assets\craftablecartography\patches\RealisticMode.json" />
   <Content Remove="..\resources\assets\craftablecartography\recipes\grid\sextanttemporal.json" />
   <Content Remove="..\resources\assets\craftablecartography\shapes\sextanttemporal.json" />
